--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,5 @@
  NEXT_PUBLIC_API_HOST=https://query.rsdpl.com
 # NEXT_PUBLIC_API_HOST=http://68.178.172.218:8088/
 # NEXT_PUBLIC_API_HOST=http://localhost:8088/
+# NEXT_PUBLIC_API_HOST=http://64.227.187.0:8088/ for testing
 NEXT_PUBLIC_GOOGLE_MAPS_KEY="AIzaSyAXdemYeAD_LoqtWyDxSo0FZ79Lze10JjY"
